--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -22,8 +22,8 @@
               <div class="navbar-nav">
                  
                 <a
-                 class="nav-item nav-link active" id="link_index" href="/index">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" id="link_select" href="/select"> Favourite Team</a>   
+                 class="nav-item nav-link " id="link_index" href="/index">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" id="link_select" href="/select"> Favourite Team</a>   
 
               </div>
               </div>
