--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
         <a class="navbar-brand" href="/index">
-            <img src="Images/logo.png" width="30" height="30" alt="">
+            <img src="/Images/logo.png" width="30" height="30" alt="">
           </a>
           <a class="navbar-brand" href="#">Basketbuzz</a>
           
