--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link href=”//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css” rel=”stylesheet” />
-    <script src=”//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js”></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head>   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
     <title>Sports Watch</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -28,18 +29,17 @@
               </div>
               </div>
                                              
-            </nav>
-                
+            </nav>               
                 <form action="index" method="POST">
                     <label for="name">
                         Select your favourite teams
                         </label>
                     <div class="input-group mb-3">
-                        <select multiple class="custom-select"  id="name" name="name" >                          
-                          <option value="Washington Wizards">Washington Wizards</option>
-                          <option value="Miami Heat">Miami Heat</option>
-                          <option value="Los Angeles Clippers">Los Angeles Clippers</option>
-                        </select>
+                        <select class="js-example-basic-multiple" id="name" name="name" multiple="multiple" style="width:90%">
+                            <option value="Washington Wizards">Washington Wizards</option>
+                            <option value="Miami Heat">Miami Heat</option>
+                            <option value="Los Angeles Clippers">Los Angeles Clippers</option>
+                          </select>
                         
                         <div class="input-group-append">
                        <button type="submit" id="btn_submit" class="btn btn-outline-info">Submit</button>
@@ -47,12 +47,14 @@
                         </div>                
                       </form>    
     </body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function() {
+       $('.js-example-basic-multiple').select2();
+       });
+          
+        
+       </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-     $("name").select2();
-       
-     
-    </script>
+   
     </html>
