--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -42,37 +42,7 @@
                         </label>
                     <div class="input-group mb-3">
                         <select class="js-example-basic-multiple" id="name" name="name" multiple="multiple" style="width:90%">
-                            <option value="Toronto Raptors">Toronto Raptors</option>
-                            <option value="Milwaukee Bucks">Milwaukee Bucks</option>
-                            <option value="Los Angeles Clippers">Los Angeles Clippers</option>
-                            <option value="Denver Nuggets">Denver Nuggets</option>
-                            <option value="Oklahoma City Thunders">Oklahoma City Thunders</option>
-                            <option value="Golden State Warriors">Golden State Warriors</option>
-                            <option value="Detroit Pistons">Detroit Pistons</option>
-                            <option value="Philadelphia 76ers">Philadelphia 76ers</option>
-                            <option value="Memphis Grizzels">Memphis Grizzels</option>
-                            <option value="Indiana Pacers">Indiana Pacers</option>
-                            <option value="Portland Trail Blazers">Portland Trail Blazers</option>
-                            <option value="Los Angeles Lakers">Los Angeles Lakers</option>
-                            <option value="Boston Celtics">Boston Celtics</option>
-                            <option value="New Orleans Pelicans">New Orleans Pelicans</option>
-                            <option value="Charlotte Hornets">Charlotte Hornets</option>
-                            <option value="Dallas Mavericks">Dallas Mavericks</option>
-                            <option value="Minnesota Timberwolves">Minnesota Timberwolves</option>
-                            <option value="Orlando Magic">Orlando Magic</option>
-                            <option value="Utah Jazz">Utah Jazz</option>
-                            <option value="Houston Rockets">Houston Rockets</option>
-                            <option value="Sacramento Kings">Sacramento Kings</option>
-                            <option value="San Antonio Spurs">San Antonio Spurs</option>
-                            <option value="Miami Heat">Miami Heat</option>
-                            <option value="Washington Wizards">Washington Wizards</option>
-                            <option value="Brooklyn Nets">Brooklyn Nets</option>
-                            <option value="New York Knicks">New York Knicks</option>
-                            <option value="Chicago Bulls">Chicago Bulls</option>
-                            <option value="Atlanta Hawks">Atlanta Hawks</option>
-                            <option value="Cleveland Cavaliers">Cleveland Cavaliers</option>
-                            <option value="Phoenix Suns">Phoenix Suns</option>
-
+                            <option th:each="gameDetail : ${gameDetails}" th:value="${gameDetail.City}+' '+${gameDetail.Name} +':'+${gameDetail.Abbreviation}" th:text="${gameDetail.City}+' '+${gameDetail.Name}"></option>
                           </select>
                         
                         <div class="input-group-append">
