--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -10,22 +10,23 @@
 <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
-            <a class="navbar-brand" href="/index">
+            <a class="navbar-brand" href="/index2">
                 <img src="Images/logo.png" width="30" height="30" alt="">
               </a>
-              <a class="navbar-brand" href="#">Basketbuzz</a>
+              <a class="navbar-brand" href="/index2">Basketbuzz</a>
               
                 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
                      
                     <a
-                     class="nav-item nav-link active" id="link_index" href="/index">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" id="link_select" href="/select"> Favourite Team</a> 
-                    <a class="nav-item nav-link" id="link_select" href="/teams"> Teams Information</a> 
+                     class="nav-item nav-link active" id="link_index" href="/index2">Home <span class="sr-only">(current)</span></a>
+                     <a class="nav-item nav-link" id="link_team" href="/teams"> Teams Information</a> 
+                    <a class="nav-item nav-link" id="link_select" href="/select"> Select Favourite Teams</a>                
                     <a class="nav-item nav-link" id="link_ranking" href="/ranking"> Team Rankings</a> 
                     <a class="nav-item nav-link" id="link_scores" href="/scoreboard"> Scoreboard</a> 
                     <a class="nav-item nav-link" id="link_schedule" href="/schedule"> Daily Schedule</a> 
+                    <a class="nav-item nav-link" id="link_login" href="/logout"> Logout</a> 
                     <!-- <a class="nav-item nav-link" id="link_logout" href=""> Logout</a>   -->
                     <!-- <div class="fb-login-button" data-max-rows="3" data-size="small" data-button-type="login_with" data-show-faces="true" data-auto-logout-link="true" data-use-continue-as="false"></div> -->
 
@@ -41,6 +42,7 @@
                     <tr>
                       <th scope="col">Team Abbreviation</th>
                       <th scope="col">Team Name</th>
+                      <th scope="col">Remove Favourite Team</th>
                      
                     </tr>
                   </thead>
@@ -48,6 +50,7 @@
                     <tr th:each="user : ${users}" >
                      <td th:text="${user.abr}">
                      <td th:text="${user.name}">
+                    <td> <a th:href="@{~/removeteam?id=} + ${user.id}" th:text="${'Remove Favourite Team'}"> </a> </td>
                             
                           </tr>
                           </tr>
