--- a/src/main/resources/templates/logoutindex.html
+++ b/src/main/resources/templates/logoutindex.html
@@ -4,28 +4,8 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        
-        .bg {
-            /* The image used */
-            background-image: url(img/home.img/core-img/compact-disc.png);
-        
-            /* Full height */
-            height: 100%; 
-        
-            /* Center and scale the image nicely */
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        </style>
 </head>
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
         <a class="navbar-brand" href="/index2">
@@ -95,29 +75,21 @@
       $("#userName").val(response.name);
       $("#loginForm").submit();
       document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
+        'Click the button to logout, ' + response.name + '!';
     });
   }
 </script>
 
 
 <!-- <fb:login-button  scope="public_profile,email" onlogin="checkLoginState();">
- </fb:login-button> -->
-<!-- <div style="width:800px; margin:0 auto;"> -->
-    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/facebook.jpg);'">
-    <div align="center">
+</fb:login-button> -->
+
+<div align="center">
 <div class="fb-login-button" scope="public_profile,email" onlogin="checkLoginState();" data-max-rows="1" data-size="large" data-button-type="continue_with"
  data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
 <div id="status">
 </div>
 </div>
-</div>
-
-<form th:action ="@{~/fblogin}" method = "post" id="loginForm">
-<input type = "hidden" name="userID" id="userID" />
-<input type = "hidden" name="userName" id="userName" />
-
-</form>
 
 
 
