--- a/src/main/resources/templates/teaminfo.html
+++ b/src/main/resources/templates/teaminfo.html
@@ -6,25 +6,27 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    </div>
     
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
-                <a class="navbar-brand" href="/index">
+                <a class="navbar-brand" href="/index2">
                     <img src="Images/logo.png" width="30" height="30" alt="">
                   </a>
-                  <a class="navbar-brand" href="#">Basketbuzz</a>
+                  <a class="navbar-brand" href="/index2">Basketbuzz</a>
                   
                     
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
                          
                         <a
-                         class="nav-item nav-link active" id="link_index" href="/index">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" id="link_select" href="/select"> Favourite Team</a> 
-                        <a class="nav-item nav-link" id="link_select" href="/teams"> Teams Information</a> 
+                         class="nav-item nav-link active" id="link_index" href="/index2">Home <span class="sr-only">(current)</span></a>
+                         <a class="nav-item nav-link" id="link_team" href="/teams"> Teams Information</a> 
+                        <a class="nav-item nav-link" id="link_select" href="/select"> Select Favourite Teams</a> 
                         <a class="nav-item nav-link" id="link_ranking" href="/ranking"> Team Rankings</a> 
                         <a class="nav-item nav-link" id="link_scores" href="/scoreboard"> Scoreboard</a> 
-                        <a class="nav-item nav-link" id="link_schedule" href="/schedule"> Daily Schedule</a> 
+                        <a class="nav-item nav-link" id="link_schedule" href="/schedule"> Daily Schedule</a>
+                        <a class="nav-item nav-link" id="link_login" href="/logout"> Logout</a>  
                         <!-- <a class="nav-item nav-link" id="link_logout" href=""> Logout</a>   -->
                         <!-- <div class="fb-login-button" data-max-rows="3" data-size="small" data-button-type="login_with" data-show-faces="true" data-auto-logout-link="true" data-use-continue-as="false"></div> -->
     
@@ -36,20 +38,26 @@
 <table class="table">
     <thead>
     <tr>
-      <th scope="col">Game ID</th>
       <th scope="col">Away team</th>
       <th scope="col">Date</th>
       <th scope="col">Time</th>
       <th scope="col">Location</th>
+      <th scope="col">Previous Wins</th>
+      <th scope="col">Previous Losses</th>
+      <th scope="col">Win %</th>
+
       
     </tr>
   </thead>
     	<tr th:each="gameDetail,iterStat : ${gameDetails}" >
-     		<td th:text="${gameDetail.get('id')}">
-            <td th:text="${gameDetail.get('awayTeam')}" >  </td>
+        <td th:text="${gameDetail.get('awayTeam')}" >  </td>
      		<td th:text="${gameDetail.get('date')}">  </td>
             <td th:text="${gameDetail.get('time')}">  </td>
             <td th:text="${gameDetail.get('location')}">  </td>
+            <td th:text="${gameDetail.get('wins')}">  </td>
+            <td th:text="${gameDetail.get('losses')}">  </td>
+            <td th:text="${gameDetail.get('winpct')}">  </td>
+
   			
   		</tr>
     </table>
