--- a/src/main/resources/templates/loginIndex.html
+++ b/src/main/resources/templates/loginIndex.html
@@ -104,7 +104,7 @@
 <!-- <fb:login-button  scope="public_profile,email" onlogin="checkLoginState();">
  </fb:login-button> -->
 <!-- <div style="width:800px; margin:0 auto;"> -->
-    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/facebook.jpg);'">
+    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/facebook1 .jpg);'">
     <div align="center">
 <div class="fb-login-button" scope="public_profile,email" onlogin="checkLoginState();" data-max-rows="1" data-size="large" data-button-type="continue_with"
  data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
