--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/index.jpg);'">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
             <a class="navbar-brand" href="/index2">
