--- a/src/main/resources/templates/showTeams.html
+++ b/src/main/resources/templates/showTeams.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/teams1.jpg);'">
     
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
@@ -45,9 +46,9 @@
   </thead>
   
     	<tr th:each="teamStandingEntry : ${teamStandingEntries}" >
-     		<td th:text="${teamStandingEntry.team.Abbreviation}" th:id="${teamStandingEntry.team.ID}">
-     		<td > <a th:href="@{~/team?id=} + ${teamStandingEntry.team.ID}" th:text="${teamStandingEntry.team.Name}"> </a> </td>
-  			<td th:text="${teamStandingEntry.team.City}">
+     		<td style="font-weight:bold" font-colour="#fff" th:text="${teamStandingEntry.team.Abbreviation}" th:id="${teamStandingEntry.team.ID}">
+     		<td style="font-weight:bold">  <a th:href="@{~/team?id=} + ${teamStandingEntry.team.ID}" th:text="${teamStandingEntry.team.Name}"> </a> </td>
+  			<td style="font-weight:bold"th:text="${teamStandingEntry.team.City}">
   		</tr>
     </table>
     
