--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -22,8 +22,8 @@
                     </div>                                              
                   </nav>
 
-                  <p th:text="'Hello Admin, ' + ${name} + '!'" />
-                  <table class="table">
+                  <p th:text="'Hello Admin, ' + ${name} + '. This is the list of all users who are registered into this application!'" />
+                  <table class="table table-striped">
                         <thead>
                         <tr>
                         <th scope="col">ID</th>
