--- a/src/main/resources/templates/logoutindex.html
+++ b/src/main/resources/templates/logoutindex.html
@@ -30,8 +30,8 @@
       testAPI();
     } else {
       // The person is not logged into your app or we are unable to tell.
-      document.getElementById('status').innerHTML = 'Please log ' +
-        'into this app to view and select teams.';
+      document.getElementById('status').innerHTML = 'Please Click the logo ' +
+        'to continue logging in again.';
     }
   }
 
