--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <div class="musica-cta-area section-padding-100 mt-100 bg-img bg-overlay2" th:style="'background-image: url(img/core-img/score5.jpg);'">
     
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 
@@ -23,7 +24,7 @@
                         <a class="nav-item nav-link" id="link_team" href="/teams"> Teams Information</a> 
                         <a class="nav-item nav-link" id="link_select" href="/select"> Select Favourite Team</a> 
                         <a class="nav-item nav-link" id="link_ranking" href="/ranking"> Team Rankings</a> 
-                        <a class="nav-item nav-link" id="link_scores" href="/scoreboard"> Scoreboard</a> 
+                        <a class="nav-item nav-link" id="link_scores" href="/scoreboard"> Daily Scoreboard</a> 
                         <a class="nav-item nav-link" id="link_schedule" href="/schedule"> Daily Schedule</a> 
                         <a class="nav-item nav-link" id="link_login" href="/logout"> Logout</a> 
                         <!-- <a class="nav-item nav-link" id="link_logout" href=""> Logout</a>   -->
@@ -33,9 +34,9 @@
                       </div>
                                                  
                     </nav>
-    <p th:text="'Hello, ' + ${name} + '!'" />
+    <p th:text="'Hello, ' + ${name} + '. This is the list of games being played today!'" />
     
-    <table class="table">
+    <table class="table table-striped">
     <thead>
     <tr>
       <th scope="col">Game ID</th>
@@ -49,12 +50,12 @@
   </thead>
   
     	<tr th:each="scheduleDetail,iterStat : ${scheduleDetails}" >
-          <td th:text="${scheduleDetail.get('id')}">
-            <td th:text="${scheduleDetail.get('homeTeam')}">
-            <td th:text="${scheduleDetail.get('awayTeam')}">
-     		<td th:text="${scheduleDetail.get('date')}">
-     		<td th:text="${scheduleDetail.get('time')}">
-  			<td th:text="${scheduleDetail.get('location')}">
+        <td style="font-weight:bold" th:text="${scheduleDetail.get('id')}">
+        <td style="font-weight:bold" th:text="${scheduleDetail.get('homeTeam')}">
+        <td style="font-weight:bold" th:text="${scheduleDetail.get('awayTeam')}">
+     		<td style="font-weight:bold" th:text="${scheduleDetail.get('date')}">
+     		<td style="font-weight:bold" th:text="${scheduleDetail.get('time')}">
+  			<td style="font-weight:bold" th:text="${scheduleDetail.get('location')}">
             
   		</tr>
   		</tr>
@@ -64,5 +65,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
