--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -26,7 +26,7 @@
                         <a class="nav-item nav-link" id="link_team" href="/teams"> Teams Information</a> 
                         <a class="nav-item nav-link" id="link_select" href="/select"> Select Favourite Teams</a>
                         <a class="nav-item nav-link" id="link_ranking" href="/ranking"> Team Rankings</a> 
-                        <a class="nav-item nav-link" id="link_scores" href="/scoreboard"> Scoreboard</a> 
+                        <a class="nav-item nav-link" id="link_scores" href="/scoreboard"> Daily Scoreboard</a> 
                         <a class="nav-item nav-link" id="link_schedule" href="/schedule"> Daily Schedule</a> 
                         <a class="nav-item nav-link" id="link_login" href="/logout"> Logout</a> 
                         <!-- <a class="nav-item nav-link" id="link_logout" href=""> Logout</a>   -->
